
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dsa_switch {int vlan_filtering_is_global; int dev; struct b53_device* priv; } ;
struct b53_device {unsigned int num_ports; } ;


 int b53_apply_config (struct b53_device*) ;
 int b53_disable_port (struct dsa_switch*,unsigned int) ;
 int b53_enable_cpu_port (struct b53_device*,unsigned int) ;
 int b53_reset_mib (struct b53_device*) ;
 int b53_reset_switch (struct b53_device*) ;
 int dev_err (int ,char*) ;
 scalar_t__ dsa_is_cpu_port (struct dsa_switch*,unsigned int) ;

__attribute__((used)) static int b53_setup(struct dsa_switch *ds)
{
 struct b53_device *dev = ds->priv;
 unsigned int port;
 int ret;

 ret = b53_reset_switch(dev);
 if (ret) {
  dev_err(ds->dev, "failed to reset switch\n");
  return ret;
 }

 b53_reset_mib(dev);

 ret = b53_apply_config(dev);
 if (ret)
  dev_err(ds->dev, "failed to apply configuration\n");




 for (port = 0; port < dev->num_ports; port++) {
  if (dsa_is_cpu_port(ds, port))
   b53_enable_cpu_port(dev, port);
  else
   b53_disable_port(ds, port);
 }






 ds->vlan_filtering_is_global = 1;

 return ret;
}
